page.jsでtemplateフォルダ内のテンプレートファイルを全て読み込む

--- a/route.yml
+++ b/route.yml
@@ -9,6 +9,9 @@
     "test":
       title: "test-test"
       page: "test/test"
+"competition":
+  title: "competition"
+  page: "com"
 "_num_":
   title: "route"
   page: "num"
