page.jsに送るデータ内に`page`情報も追加
`route.yml`で、表示しないページには`page`を書かない。

--- a/route.yml
+++ b/route.yml
@@ -12,6 +12,13 @@
 "competition":
   title: "competition"
   page: "competition"
+  children:
+    "year":
+      children:
+        "_num_":
+          title: "com-year"
+          page: "compeition/year"
+          var: "year_id"
 "_num_":
   title: "route"
   page: "num"
