各ページ表示用関数に`page`情報を送る
`page`情報は、`/`で分割されて`page.js`に送られる。

--- a/route.yml
+++ b/route.yml
@@ -17,7 +17,7 @@
       children:
         "_num_":
           title: "com-year"
-          page: "compeition/year"
+          page: "competition/year"
           var: "year_id"
 "_num_":
   title: "route"
