--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/walk8243/nodejs-taf-site#readme",
   "dependencies": {
+    "config": "^1.28.1",
     "js-yaml": "^3.10.0"
   }
 }
