--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # node_modules以下を無視する
-node_modules/
+/node_modules/
+
+# .lnkファイルを無視する
+*.lnk
 
 # config/product.ymlを無視する
-config/product.yml
+/config/product.yml
