--- a/config/default.yml
+++ b/config/default.yml
@@ -1,3 +1,9 @@
 account:
   name: "account name"
   mail: "account mail"
+
+mysql:
+  host: "hostname"
+  user: "username"
+  pass: "password"
+  database: "database"
