--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/walk8243/nodejs-taf-site#readme",
   "dependencies": {
     "config": "^1.28.1",
+    "ejs": "^2.5.7",
     "js-yaml": "^3.10.0",
     "mysql": "^2.15.0"
   }
