sassをコンパイルする準備

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "ejs": "^2.5.7",
     "js-yaml": "^3.10.0",
     "mysql": "^2.15.0"
+  },
+  "devDependencies": {
+    "node-sass": "^4.7.2"
   }
 }
