--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "config": "^1.28.1",
     "ejs": "^2.5.7",
+    "htpasswd": "^2.4.0",
+    "http-auth": "^3.2.3",
     "js-yaml": "^3.10.0",
     "mysql": "^2.15.0"
   },
