--- a/package.json
+++ b/package.json
@@ -19,15 +19,6 @@
     "url": "https://github.com/walk8243/nodejs-taf-site/issues"
   },
   "homepage": "https://github.com/walk8243/nodejs-taf-site#readme",
-  "dependencies": {
-    "config": "^1.28.1",
-    "ejs": "^2.5.7",
-    "htpasswd": "^2.4.0",
-    "http-auth": "^3.2.3",
-    "js-yaml": "^3.10.0",
-    "mysql": "^2.15.0"
-  },
-  "devDependencies": {
-    "node-sass": "^4.7.2"
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
