--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "js-yaml": "^3.11.0",
     "mysql": "^2.15.0",
     "node-sass": "^4.7.2",
+    "serve-favicon": "^2.5.0",
     "vhost": "^3.0.2"
   },
   "devDependencies": {}
