--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "fs": "0.0.1-security",
+    "hoek": "^5.0.3",
     "htdigest": "^2.2.3",
     "http-auth": "^3.2.3",
     "js-yaml": "^3.11.0",
     "mysql": "^2.15.0",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.9.0",
     "serve-favicon": "^2.5.0",
     "vhost": "^3.0.2"
   },
